--- a/first.html
+++ b/first.html
@@ -19,7 +19,7 @@
   <p>THis is just some text for heading 3</p>
   
 
-  <script type="text/javascrpit" src"first.js"></script>
+  <script type="text/javascript" src"first.js"></script>
   </body>
 </html>
     
